--- a/HW2/style_1.css
+++ b/HW2/style_1.css
@@ -7,8 +7,6 @@ body {
     display: flex;
     flex-direction: column;
     text-align: center;
-    box-sizing: border-box;
-
 }
 
 .container {
@@ -19,23 +17,38 @@ body {
 header {
     background-color: tomato;
     height: 60px;
+    padding: 10px;
+    box-sizing: border-box;
+
 }
 nav {
     width: 100px;
     background-color: coral;
+    padding: 10px;
+    box-sizing: border-box;
+
 }
 
 main {
     flex: 1;
     background-color: moccasin;
+    padding: 10px;
+    box-sizing: border-box;
+
 }
 
 aside {
     width: 100px;
     background-color: sandybrown;
+    padding: 10px;
+    box-sizing: border-box;
+
 }
 
 footer {
     background-color: slategray;
     height: 100px;
+    padding: 10px;
+    box-sizing: border-box;
+
 }
